--- a/index.html
+++ b/index.html
@@ -1,11 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Student Marks Manager</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      padding: 5px 10px;
+    }
+    input, button {
+      display: block;
+      margin: 10px 0;
+      padding: 5px;
+    }
+  </style>
 </head>
 <body>
-    
+
+  <h3>Student Table</h3>
+  <table id="studentTable">
+    <tr>
+      <th>Name</th>
+      <th>ID</th>
+      <th>Marks</th>
+    </tr>
+  </table>
+
+  <h4>Add Student</h4>
+  <input type="text" id="name" placeholder="Name">
+  <input type="text" id="id" placeholder="ID">
+  <input type="text" id="marks" placeholder="Marks">
+  <button onclick="addStudent()">Add</button>
+
+  <h4>Modify Marks by ID</h4>
+  <input type="text" id="modId" placeholder="Enter ID to search">
+  <button onclick="searchAndModify()">Search</button>
+
+  <script>
+    function addStudent() {
+      const name = document.getElementById("name").value;
+      const id = document.getElementById("id").value;
+      const marks = document.getElementById("marks").value;
+
+      if (name && id && marks) {
+        const table = document.getElementById("studentTable");
+        const row = table.insertRow();
+        row.insertCell(0).innerText = name;
+        row.insertCell(1).innerText = id;
+        row.insertCell(2).innerText = marks;
+
+        document.getElementById("name").value = "";
+        document.getElementById("id").value = "";
+        document.getElementById("marks").value = "";
+      } else {
+        alert("Please fill all fields");
+      }
+    }
+
+    function searchAndModify() {
+      const modId = document.getElementById("modId").value;
+      const table = document.getElementById("studentTable");
+      let found = false;
+
+      for (let i = 1; i < table.rows.length; i++) {
+        if (table.rows[i].cells[1].innerText === modId) {
+          const newMarks = prompt("Enter new marks for ID " + modId + ":");
+          if (newMarks !== null && newMarks.trim() !== "") {
+            table.rows[i].cells[2].innerText = newMarks;
+          } else {
+            alert("No marks entered.");
+          }
+          found = true;
+          break;
+        }
+      }
+
+      if (!found) {
+        alert("ID not found.");
+      }
+
+      document.getElementById("modId").value = "";
+    }
+  </script>
+
 </body>
 </html>
