--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-@khadil
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -25,7 +25,7 @@
   <button onclick="addStudent()">Add</button>
 
   <h4>Modify Marks by ID</h4>
-  <input type="text" id="modId" placeholder="Enter ID to search">
+  <input type="text" id="modId" >
   <button onclick="searchAndModify()">Search</button>
 
   <script src="script.js"></script>
